--- a/scripts/config/scrapingConfig.json
+++ b/scripts/config/scrapingConfig.json
@@ -1,7 +1,10 @@
 {
-    "sessionId": "scraping-fotocasa-raspberryOld--12_5_2018,_2_27_58_PM",
-    "appId": "airbnb",
-    "method": "cusec",
-    "deviceId": "raspberryOld",
-    "useSavedFeaturesInFile": true
+    "devices": [
+                {"appId": "airbnb",
+                "method": "boundingBox",
+                "deviceId": "raspberryOld"},
+                {"appId": "fotocasa",
+                "method": "boundingBox",
+                "deviceId": "gloud"}
+                ]
 }
