--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "chai-http": "^4.2.1",
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
+    "jsonexport": "^2.4.1",
+    "lodash": "^4.17.11",
     "mocha": "^5.2.0",
     "morgan": "^1.9.1",
     "mysql": "^2.16.0",
