--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "mocha --timeout 10000"
+    "start": "node server.js",
+    "test": "mocha --timeout 10000",
+    "initialize": "./scripts/initialize_tables_and_populate.sh"
   },
   "author": "",
   "license": "ISC",
