--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "jsonexport": "^2.4.1",
     "lodash": "^4.17.11",
     "mocha": "^5.2.0",
+    "mongoose": "^5.4.18",
     "morgan": "^1.9.1",
     "mysql": "^2.16.0",
     "objects-to-csv": "^1.2.1",
+    "passport": "^0.4.0",
     "restify": "^7.5.0",
     "restify-cors-middleware": "^1.1.1",
     "restify-plugins": "^1.6.0",
