--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
+    "bcrypt-nodejs": "0.0.3",
     "chai": "^4.2.0",
     "chai-almost": "^1.0.1",
     "chai-http": "^4.2.1",
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "jsonexport": "^2.4.1",
+    "jsonwebtoken": "^8.5.0",
     "lodash": "^4.17.11",
     "mocha": "^5.2.0",
     "mongoose": "^5.4.18",
@@ -25,6 +27,7 @@
     "mysql": "^2.16.0",
     "objects-to-csv": "^1.2.1",
     "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "restify": "^7.5.0",
     "restify-cors-middleware": "^1.1.1",
     "restify-plugins": "^1.6.0",
